# tamuctf-2024

./: .gitignore  README.md  workspace.toml
crypto/criminal/: Makefile  README.md  config.toml  flag.txt  server.py  solve.py  solver-template.py
crypto/emoji-group/: Dockerfile  Makefile  README.md  config.toml  emoji_group.py  flag.txt  secrets.py  solve.py  solver-template.py
crypto/jumbled/: Makefile  README.md  build.py  config.toml  flag.txt  flag.txt.enc  private  private.pem  private_original  public  public.pem  unshuffle.py
crypto/pcg/: Dockerfile  Makefile  README.md  flag.txt  pcg.py  solve.py  solver-template.py
crypto/qcg/: Dockerfile  Makefile  README.md  config.toml  flag.txt  qcg.py  solve.py  solver-template.py
crypto/smooth-signatures/: Dockerfile  Makefile  README.md  config.toml  flag.txt  smooth_signatures.py  solve.py  solver-template.py
crypto/truncated-1/: Makefile  README.md  config.toml  flag.txt  flag.txt.enc  private.pem  public.pem  publickey_values  reconstructedprivate.pem  script.py
crypto/truncated-2/: Makefile  README.md  attack.py  flag.txt  flag.txt.enc  private.pem  public.pem  reconstructedprivate.pem  script.py
forensics/corrupted/: Makefile  README.md
forensics/deleted/: README.md  config.toml
forensics/fuzzy/: Makefile  README.md  config.toml  script.py
forensics/mcfs/: .gitignore  README.md
forensics/smp/: Makefile  README.md  parsed_file.txt  solve.py
forensics/volatile/: README.md
misc/ladders/: Makefile  README.md  file.ckp
misc/lost-tourist/: Makefile  README.md  config.toml
misc/missing/: README.md
misc/over-the-shoulder/: Dockerfile  Makefile  README.md  config.toml  entrypoint.sh  solver-template.py
misc/scavenging/: Dockerfile  Makefile  README.md  busybox.config  entrypoint.sh  flag.txt  init  solver-template.py
pwn/admin-panel/: Dockerfile  Makefile  README.md  admin-panel.c  flag.txt  solve.py  solver-template.py
pwn/confinement/: Dockerfile  Makefile  README.md  config.toml  confinement.c  flag.txt  solve.py  solver-template.py
pwn/five/: Dockerfile  Makefile  README.md  config.toml  dist.Dockerfile  five.c  flag.txt  solve.py  solver-template.py
pwn/good-emulation/: Dockerfile  Makefile  README.md  dist.Dockerfile  flag.txt  good-emulation.c  solve.py  solver-template.py
pwn/index/: Makefile  README.md  flag.txt  index.c  solve.py  solver-template.py
pwn/janky/: Dockerfile  Makefile  README.md  flag.txt  janky.c  solve.py  solver-template.py
pwn/rift/: Makefile  README.md  solve.py  solver-template.py
pwn/shrink/: Dockerfile  Makefile  README.md  flag.txt  shrink.cpp  solve.py  solver-template.py
pwn/super-lucky/: Makefile  README.md  flag.txt  solve.py  solver-template.py  super-lucky.c
rev/alien/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  (+1 more)
rev/alien/alien/: Cargo.toml  build.rs
rev/alien/alien/src/: main.rs
rev/deflect/deflect/: Cargo.toml
rev/deflect/deflect/src/: main.rs
rev/deflect/solver2/solver2/: Cargo.toml
rev/deflect/solver2/solver2-ebpf/: Cargo.toml
rev/deflect/solver2/solver2-ebpf/src/: main.rs
rev/deflect/solver2/solver2/src/: main.rs
rev/enlightenment/: Cargo.toml  Dockerfile  Makefile  README.md
rev/enlightenment/src/: main.rs
(+120 files in other folders)
