[package]
name = "enlightenment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
hex-literal = "0.4.1"
rand = "0.8.5"
rand_chacha = "0.3"
reqwest = { version = "0.11" }
tokio = { version = "1.32", features = ["full"] }

[profile.release]
strip = true
lto = true
opt-level = 3
debug = false
