[package]
name = "deflect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
deflect-common = { path = "../deflect-common", features = ["user"] }
anyhow = "1"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
pnet_packet = "0.34.0"
warp = { version = "0.3.6", default-features = false }
env_logger = "0.10"
log = "0.4"
aya-log = { git = "https://github.com/aya-rs/aya" }
nix = { version = "0.27.1", features = ["socket", "net", "resource"] }

[[bin]]
name = "deflect"
path = "src/main.rs"
